--- a/client/views/navbar/_navbar.sass
+++ b/client/views/navbar/_navbar.sass
@@ -1,5 +1,10 @@
 .navbar-container 
   display: flex
+  flex-direction: row-reverse
   width: 100%
   height: 50px
   background-color: #DBDBDB
+
+
+.navbar-actions-container
+  margin: 0 20px;
