Setup logo redirect

--- a/client/views/navbar/_navbar.sass
+++ b/client/views/navbar/_navbar.sass
@@ -1,10 +1,18 @@
 .navbar-container 
   display: flex
-  flex-direction: row-reverse
+  flex-direction: row
   width: 100%
   height: 50px
   background-color: #DBDBDB
 
+.logo-container
+  lex-grow: 7
+  display: flex
+  justify-content: flex-start
 
 .navbar-actions-container
   margin: 0 20px;
+  flex-grow: 1
+  display: flex
+  justify-content: flex-end
+
