Improved button & inputfield style

--- a/client/components/button/_button.sass
+++ b/client/components/button/_button.sass
@@ -1,8 +1,19 @@
 .button-container 
   display: flex
   justify-content: center
-  height: 100%
+  align-items: center
+  height: 20px
+  margin: 10px 0
 
 .button
   border: none
   outline: none
+
+.button-signup
+  padding: 5px 12px
+  font-size: 14px
+  background-color:  #00BCD4
+  color: white
+
+.button-signup:hover
+  background-color: #0097A7
