--- a/client/components/input-field/_input-field.sass
+++ b/client/components/input-field/_input-field.sass
@@ -1,4 +1,11 @@
 .inputfield-container 
   display: flex
   justify-content: center
-  height: 100%
+  align-items: center
+  height: 20px
+  margin: 10px 0
+
+.inputfield 
+  height: 18px
+  font-size: 14px
+
