--- a/client/views/signup/_signup.sass
+++ b/client/views/signup/_signup.sass
@@ -1,5 +1,10 @@
 .signup-container
-  height: 1200px
-  
+  height: 770px
+
+.signup-header
+  text-align: center
 
 .signup-inputfields-container
+  height: 300px
+  display: flex
+  flex-direction: column
