--- a/client/components/button/_button.sass
+++ b/client/components/button/_button.sass
@@ -9,11 +9,14 @@
   border: none
   outline: none
 
-.button-signup
+.button-primary
   padding: 5px 12px
   font-size: 14px
   background-color:  #00BCD4
   color: white
 
-.button-signup:hover
+.button-primary:hover:enabled
   background-color: #0097A7
+
+.button-disabled
+  opacity: 0.5
