Setup active class signup flow buttons

--- a/client/components/button/_button.sass
+++ b/client/components/button/_button.sass
@@ -15,8 +15,22 @@
   background-color:  #00BCD4
   color: white
 
+.button-primary-active
+  background-color: #0097A7
+
 .button-primary:hover:enabled
   background-color: #0097A7
 
 .button-disabled
   opacity: 0.5
+
+.button-signup-step-option
+  background-color: #8BC34A
+  color: white
+  height: 30px
+
+.button-signup-step-option:hover
+  background-color: #689F38
+
+.button-signup-step-option-active
+  background-color: #689F38
