Styled signup steps buttons

--- a/client/views/signup-steps/_signup-steps.sass
+++ b/client/views/signup-steps/_signup-steps.sass
@@ -1,6 +1,9 @@
 .signup-steps-container
   height: 800px
 
-.signup-steps-button-container
+.signup-navigation-button-container
   display: flex
   justify-content: space-around
+
+.signup-step-contianer
+  margin: 100px 0
