--- a/client/components/button/_button.sass
+++ b/client/components/button/_button.sass
@@ -27,7 +27,10 @@
 .button-signup-step-option
   background-color: #8BC34A
   color: white
-  height: 30px
+  height: 100px
+  font-size: 14px
+  width: 100px
+  margin: 10px
 
 .button-signup-step-option:hover
   background-color: #689F38
