Improved UI signup flow

--- a/client/components/button/_button.sass
+++ b/client/components/button/_button.sass
@@ -32,7 +32,7 @@
   width: 100px
   margin: 10px
 
-.button-signup-step-option:hover
+.button-signup-step-option:hover:enabled
   background-color: #689F38
 
 .button-signup-step-option-active
