--- a/client/components/text-area-field/_text-area-field.sass
+++ b/client/components/text-area-field/_text-area-field.sass
@@ -1,13 +1,11 @@
-.inputfield-container 
+.textAreaField-container 
   display: flex
   justify-content: center
   align-items: center
-  height: 20px
   margin: 10px 0
 
-.inputfield 
-  height: 18px
+.textAreaField 
   font-size: 14px
 
-.project-form-input-field
+.project-form-text-area-field
   width: 50%
