Implemented password hashing for signup and login

--- a/client/views/login-form/_login-form.sass
+++ b/client/views/login-form/_login-form.sass
@@ -1,6 +1,7 @@
 .login-form-container
   display: flex
   flex-direction: row
+  height: 100%
 
 .login-form-field-container
   display:flex
@@ -11,6 +12,6 @@
 
 .login-error-message
   color: red
-  font-size: 12px
+  font-size: 13px
   margin: 0 5px
 
