implemented basic styling for matching view

--- a/client/views/home/donor/search-bar/_search-bar.sass
+++ b/client/views/home/donor/search-bar/_search-bar.sass
@@ -5,5 +5,8 @@
 
 .search-container
   display: flex
-  flex-direction: row
+  flex-direction: column
 
+.checkboxes-container
+  margin: 10px 0
+  padding: 5px
