--- a/client/views/navbar/_navbar.sass
+++ b/client/views/navbar/_navbar.sass
@@ -3,7 +3,7 @@
   flex-direction: row
   width: 100%
   height: 50px
-  background-color: #DBDBDB
+  background-color: #B2EBF2
 
 .logo-container
   lex-grow: 1
@@ -19,3 +19,27 @@
 .navbar-actions-nav-container
   display: flex
   flex-direction: row
+
+.nav-link
+  height: 100%
+  width: 60px
+
+.nav-button-container
+  height: 100%
+  margin: 0
+  display: flex
+  align-items: center
+
+.nav-button
+  height: 100%
+  width: 100%
+  background-color: #B2EBF2
+  font-size: 14px
+
+.nav-button:hover
+  background-color: #00BCD4
+  color: white
+
+.nav-button-active
+  background-color: #00BCD4
+  color: white
