Setup search button and inputfields handler

--- a/client/views/home/donor/search-bar/_search-bar.sass
+++ b/client/views/home/donor/search-bar/_search-bar.sass
@@ -10,3 +10,8 @@
 .checkboxes-container
   margin: 10px 0
   padding: 5px
+
+.search-error-message
+  color: red
+  font-size: 13px
+  margin: 0 5px
