improved searchbar UI

--- a/client/views/home/donor/search-bar/_search-bar.sass
+++ b/client/views/home/donor/search-bar/_search-bar.sass
@@ -3,15 +3,44 @@
   flex-direction: column
   justify-content: center
 
+.searchbar-header
+  margin: 5px 0
+
+.filter-main-actions-container
+  border-bottom: 1px solid grey
+  display: flex
+  flex-direction: row
+
+.button-searchbar-action-container
+  width: 50%
+  padding: 20px 0
+
+.button-searchbar-action
+  width: 100%
+  margin: 0
+  height: 40px
+
+.button-searchbar-action:hover
+  color: white
+
+.button-searchbar-action-active
+  color: white
+
 .search-container
+  padding: 5px
   display: flex
   flex-direction: column
-
-.checkboxes-container
-  margin: 10px 0
-  padding: 5px
+  border-bottom: 1px solid grey
 
 .search-error-message
   color: red
   font-size: 13px
-  margin: 0 5px
+  margin: 0
+
+.filter-container
+  margin: 0
+  padding: 5px
+  border-bottom: 1px solid grey
+
+.checkboxes-container
+  padding: 10px 0
