--- a/client/views/home/donor/matches/_matches.sass
+++ b/client/views/home/donor/matches/_matches.sass
@@ -4,3 +4,10 @@
   flex-wrap: wrap
   justify-content: space-around
   align-items: center
+
+.match-industry-tags
+  background-color: #dfdfdf
+  margin: 5px
+  padding: 5px 8px
+  border-radius: 15px
+  font-size: 16px 
