Improve Match view UI and added buttons

--- a/client/views/home/donor/match/_match.sass
+++ b/client/views/home/donor/match/_match.sass
@@ -2,9 +2,23 @@
   border: 1px solid grey
   margin: 20px
   width: 300px
-  height: 250px
+  height: 300px
   text-align: center
+
+.match-title
+  height: 40px
+  line-height: 20px
+  overflow-y: hidden
 
 .match-description
   padding: 10px
-  overflow-y: auto
+  height: 132px
+  line-height: 16px
+  overflow-y: hidden
+
+.match-action-container
+  display: flex
+  flex-direction: row
+  justify-content: space-around
+  height: 30px
+
