--- a/client/views/home/donor/matches/_matches.sass
+++ b/client/views/home/donor/matches/_matches.sass
@@ -5,6 +5,9 @@
   justify-content: space-around
   align-items: center
 
+.match-industry-tags-container
+  margin: 10px 0
+
 .match-industry-tags
   background-color: #dfdfdf
   margin: 5px
