Added custom font

--- a/client/views/home/donor/match/_match.sass
+++ b/client/views/home/donor/match/_match.sass
@@ -11,10 +11,11 @@
   overflow-y: hidden
 
 .match-description
-  padding: 10px
-  height: 132px
+  padding: 0 10px
+  height: 129px
   line-height: 16px
   overflow-y: hidden
+  text-align: left
 
 .match-action-container
   display: flex
