Improved UI signup form and landing page

--- a/client/views/signupform/_signupform.sass
+++ b/client/views/signupform/_signupform.sass
@@ -1,14 +1,23 @@
 .signup-container
   height: 770px
+  display: flex
+  flex-direction: column
+  align-items: center
 
 .signup-header
   text-align: center
+  font-size: 24px
+  width: 300px
 
 .signup-inputfields-container
   height: 300px
+  width: 200px
   display: flex
   flex-direction: column
 
 .signup-error-message
+  color: red
+  font-size: 13px
+  margin: 0
   text-align: center
   
