Refactored components to function components

--- a/client/views/signupform/_signupform.sass
+++ b/client/views/signupform/_signupform.sass
@@ -1,8 +1,11 @@
 .signup-container
-  height: 770px
   display: flex
   flex-direction: column
   align-items: center
+  margin: 50px
+  padding: 20px
+  background-color: white
+
 
 .signup-header
   text-align: center
@@ -10,8 +13,7 @@
   width: 300px
 
 .signup-inputfields-container
-  height: 300px
-  width: 200px
+  padding: 10px
   display: flex
   flex-direction: column
 
