--- a/client/views/footer/_footer.sass
+++ b/client/views/footer/_footer.sass
@@ -1,5 +1,7 @@
 .app-footer-container
   background-color: #DBDBDB
+  position: fixed
+  bottom: 0
   width: 100%
   height: 25px
   text-align: right
