fixed Climate typo

--- a/client/views/home/donor/match/_match.sass
+++ b/client/views/home/donor/match/_match.sass
@@ -6,16 +6,17 @@
   text-align: center
 
 .match-title
+  padding: 0 20px
   height: 40px
   line-height: 20px
   overflow-y: hidden
 
 .match-description
-  padding: 0 10px
+  padding: 0 20px
   height: 129px
   line-height: 16px
   overflow-y: hidden
-  text-align: left
+  text-align: justify
 
 .match-action-container
   display: flex
