Improved search bar UI

--- a/client/views/home/donor/search-bar/_search-bar.sass
+++ b/client/views/home/donor/search-bar/_search-bar.sass
@@ -3,22 +3,26 @@
   flex-direction: column
   justify-content: center
 
-.searchbar-header
+.search-bar-category-header
   margin: 5px 0
+  font-weight: bold
 
 .filter-main-actions-container
   border-bottom: 1px solid grey
   display: flex
-  flex-direction: row
+  flex-direction: column
+  justify-content: center
+  align-items: center
 
 .button-searchbar-action-container
-  width: 50%
-  padding: 20px 0
+  width: 90%
+  padding: 5px 0
 
 .button-searchbar-action
   width: 100%
   margin: 0
-  height: 40px
+  height: 30px
+  font-size: 14px
 
 .button-searchbar-action:hover
   color: white
