Improved UI matches component

--- a/client/views/home/donor/matches/_matches.sass
+++ b/client/views/home/donor/matches/_matches.sass
@@ -1,12 +1,32 @@
+.matches-view-header
+  font-size: 24px
+  text-align: center
+
 .matches-container
+  padding: 20px 0
   display: flex
   flex-direction: row
   flex-wrap: wrap
   justify-content: space-around
   align-items: center
 
-.match-industry-tags-container
+.match-industry-text-container
+  text-align: center
   margin: 10px 0
+  display: flex
+  flex-direction: row
+  flex-wrap: wrap
+  justify-content: center
+
+.match-result-number
+  padding: 5px
+  margin: 5px
+
+.match-industry-tags-container
+  display: flex
+  flex-direction: row
+  justify-content: center
+  align-items: center
 
 .match-industry-tags
   background-color: #dfdfdf
@@ -14,3 +34,4 @@
   padding: 5px 8px
   border-radius: 15px
   font-size: 16px 
+
