Improved Landing page responsiveness

--- a/client/views/landing-page/_landing-page.sass
+++ b/client/views/landing-page/_landing-page.sass
@@ -1,5 +1,7 @@
 .landing-page-container
   display: flex
+  flex-wrap: wrap
   flex-direction: row
   justify-content: space-around
   align-items: center
+  height: 93vh
