improved UI matches

--- a/client/views/home/donor/matches/_matches.sass
+++ b/client/views/home/donor/matches/_matches.sass
@@ -29,9 +29,23 @@
   align-items: center
 
 .match-industry-tags
-  background-color: #dfdfdf
   margin: 5px
   padding: 5px 8px
   border-radius: 15px
-  font-size: 16px 
+  font-size: 16px
+  color: white
 
+.match-industry-tags-tech
+  background-color: #bfa4f3
+
+.match-industry-tags-healthcare
+  background-color: #f3ade5
+
+.match-industry-tags-climate
+  background-color: #9be28e
+
+.match-industry-tags-globalchange
+  background-color: #828cd2
+
+.match-industry-tags-inclusion
+  background-color: #ff8d80
