--- a/client/views/home/donor/match/_match.sass
+++ b/client/views/home/donor/match/_match.sass
@@ -1,12 +1,14 @@
 .match-container
-  border: 1px solid grey
+  border: 2px solid grey
   margin: 20px
   width: 300px
-  height: 300px
+  height: 290px
   text-align: center
+  background-color: white
 
 .match-title
-  padding: 0 20px
+  margin: 18px 20px
+  padding: 0
   height: 40px
   line-height: 20px
   overflow-y: hidden
@@ -22,5 +24,6 @@
   display: flex
   flex-direction: row
   justify-content: space-around
-  height: 30px
+  align-items: center
+  height: 50px
 
