Improved match UI and fixes allProject query

--- a/client/views/home/donor/match/_match.sass
+++ b/client/views/home/donor/match/_match.sass
@@ -6,8 +6,34 @@
   text-align: center
   background-color: white
 
+.industry-name-bullets-container
+  display: flex
+  flex-direction: row
+  padding: 0 10px
+
+.industry-name-bullet
+  margin: 8px
+  padding: 0
+  width: 40px
+  height: 6px
+
+.industry-name-bullet-tech
+  background-color: #bfa4f3
+
+.industry-name-bullet-healthcare
+  background-color: #f3ade5
+
+.industry-name-bullet-climate
+  background-color: #9be28e
+
+.industry-name-bullet-globalchange
+  background-color: #828cd2
+
+.industry-name-bullet-inclusion
+  background-color: #ff8d80
+
 .match-title
-  margin: 18px 20px
+  margin: 10px 20px 18px 20px
   padding: 0
   height: 40px
   line-height: 20px
