--- a/client/views/home/donor/match/_match.sass
+++ b/client/views/home/donor/match/_match.sass
@@ -1,10 +1,10 @@
 .match-container
-  border: 2px solid grey
+  border: 2px solid #d3d3d3
   margin: 20px
   width: 300px
   height: 290px
   text-align: center
-  background-color: white
+  background-color: #f1f1f1
 
 .industry-name-bullets-container
   display: flex
