improved match UI

--- a/client/views/home/donor/match/_match.sass
+++ b/client/views/home/donor/match/_match.sass
@@ -1,5 +1,5 @@
 .match-container
-  border: 2px solid #d3d3d3
+  border: 2px solid #a8a8a8
   margin: 20px
   width: 300px
   height: 290px
@@ -18,19 +18,19 @@
   height: 6px
 
 .industry-name-bullet-tech
-  background-color: #bfa4f3
+  background-color: #fc6e51
 
 .industry-name-bullet-healthcare
-  background-color: #f3ade5
+  background-color: #5d9cec
 
 .industry-name-bullet-climate
-  background-color: #9be28e
+  background-color: #a0d468
 
 .industry-name-bullet-globalchange
-  background-color: #828cd2
+  background-color: #ec87c0
 
 .industry-name-bullet-inclusion
-  background-color: #ff8d80
+  background-color: #ac92ec
 
 .match-title
   margin: 10px 20px 18px 20px
