--- a/client/views/home/donor/matches/_matches.sass
+++ b/client/views/home/donor/matches/_matches.sass
@@ -30,22 +30,27 @@
 
 .match-industry-tags
   margin: 5px
-  padding: 5px 8px
+  padding: 3px 8px
   border-radius: 15px
-  font-size: 16px
+  font-size: 14px
   color: white
 
 .match-industry-tags-tech
-  background-color: #bfa4f3
+  border: 1px solid #fc6e51
+  color: #fc6e51
 
 .match-industry-tags-healthcare
-  background-color: #f3ade5
+  border: 1px solid #5d9cec
+  color: #5d9cec
 
 .match-industry-tags-climate
-  background-color: #9be28e
+  border: 1px solid #a0d468
+  color: #a0d468
 
 .match-industry-tags-globalchange
-  background-color: #828cd2
+  border: 1px solid #ec87c0
+  color: #ec87c0
 
 .match-industry-tags-inclusion
-  background-color: #ff8d80
+  border: 1px solid #ac92ec
+  color: #ac92ec
