--- a/client/views/home/donor/search-bar/_search-bar.sass
+++ b/client/views/home/donor/search-bar/_search-bar.sass
@@ -8,7 +8,7 @@
   font-weight: bold
 
 .filter-main-actions-container
-  border-bottom: 1px solid grey
+  border-bottom: 1px solid #a8a8a8
   display: flex
   flex-direction: column
   justify-content: center
@@ -34,7 +34,7 @@
   padding: 5px
   display: flex
   flex-direction: column
-  border-bottom: 1px solid grey
+  border-bottom: 1px solid #a8a8a8
 
 .search-error-message
   color: red
@@ -44,7 +44,7 @@
 .filter-container
   margin: 0
   padding: 5px
-  border-bottom: 1px solid grey
+  border-bottom: 1px solid #a8a8a8
 
 .checkboxes-container
   padding: 10px 0
