--- a/client/views/navbar/_navbar.sass
+++ b/client/views/navbar/_navbar.sass
@@ -3,7 +3,7 @@
   flex-direction: row
   width: 100%
   height: 50px
-  background-color: #B2EBF2
+  background-color: #213c4b
 
 .logo-container
   lex-grow: 1
@@ -24,6 +24,9 @@
   height: 100%
   width: 80px
 
+.nav-link-logout
+  margin-right: 3px
+
 .nav-button-container
   height: 100%
   margin: 0
@@ -31,15 +34,17 @@
   align-items: center
 
 .nav-button
+  padding: 5px
   height: 100%
   width: 100%
-  background-color: #B2EBF2
+  background-color: #213c4b
   font-size: 14px
+  color: #a8a8a8
 
 .nav-button:hover
-  background-color: #00BCD4
+  background-color: #152933
   color: white
 
 .nav-button-active
-  background-color: #00BCD4
+  background-color: #152933
   color: white
