--- a/client/views/home/donor/_donor.sass
+++ b/client/views/home/donor/_donor.sass
@@ -6,6 +6,8 @@
   flex-grow: 5
   padding: 20px
   background-color: white
+  height: 88vh
+  overflow-y: auto
 
 .search-bar-view-container
   flex-grow: 1
