--- a/client/views/home/donor/match/_match.sass
+++ b/client/views/home/donor/match/_match.sass
@@ -41,10 +41,11 @@
 
 .match-description
   padding: 0 20px
-  height: 129px
-  line-height: 16px
+  height: 133px
+  line-height: 19px
   overflow-y: hidden
-  text-align: justify
+  text-align: left
+  font-weight: 300
 
 .match-action-container
   display: flex
