--- a/client/style/style.sass
+++ b/client/style/style.sass
@@ -1,6 +1,6 @@
 body
   margin: 0
-  font-family: 'Quattrocento Sans', sans-serif
+  font-family: 'Lato', sans-serif;
   background-color: #f1f1f1
 
 a 
