improved filter UI

--- a/client/views/home/donor/search-bar/_search-bar.sass
+++ b/client/views/home/donor/search-bar/_search-bar.sass
@@ -48,3 +48,22 @@
 
 .checkboxes-container
   padding: 10px 0
+
+.search-bar-checkbox-container
+  margin: 5px 0
+  padding: 0 5px
+
+.search-bar-checkbox-container-tech
+  border-left: 4px solid #fc6e51
+
+.search-bar-checkbox-container-healthcare
+  border-left: 4px solid #5d9cec
+
+.search-bar-checkbox-container-climate
+  border-left: 4px solid #a0d468
+
+.search-bar-checkbox-container-globalchange
+  border-left: 4px solid #ec87c0
+
+.search-bar-checkbox-container-inclusion
+  border-left: 4px solid #ac92ec
