Improved search bar UI

--- a/client/views/home/donor/match/_match.sass
+++ b/client/views/home/donor/match/_match.sass
@@ -21,16 +21,16 @@
   background-color: #fc6e51
 
 .industry-name-bullet-healthcare
-  background-color: #5d9cec
+  background-color: #ffce54
 
 .industry-name-bullet-climate
   background-color: #a0d468
 
 .industry-name-bullet-globalchange
-  background-color: #ec87c0
+  background-color: #ac92ec
 
 .industry-name-bullet-inclusion
-  background-color: #ac92ec
+  background-color: #4fc1e9
 
 .match-title
   margin: 10px 20px 18px 20px
