--- a/client/views/home/donor/matches/_matches.sass
+++ b/client/views/home/donor/matches/_matches.sass
@@ -40,17 +40,17 @@
   color: #fc6e51
 
 .match-industry-tags-healthcare
-  border: 1px solid #5d9cec
-  color: #5d9cec
+  border: 1px solid #ffce54
+  color: #ffce54
 
 .match-industry-tags-climate
   border: 1px solid #a0d468
   color: #a0d468
 
 .match-industry-tags-globalchange
-  border: 1px solid #ec87c0
-  color: #ec87c0
-
-.match-industry-tags-inclusion
   border: 1px solid #ac92ec
   color: #ac92ec
+
+.match-industry-tags-inclusion
+  border: 1px solid #4fc1e9
+  color: #4fc1e9
