--- a/client/views/home/donor/search-bar/_search-bar.sass
+++ b/client/views/home/donor/search-bar/_search-bar.sass
@@ -6,16 +6,17 @@
 .search-bar-category-header
   margin: 5px 0
   font-weight: bold
+  width: 100%
 
 .filter-main-actions-container
   border-bottom: 1px solid #a8a8a8
-  display: flex
-  flex-direction: column
-  justify-content: center
-  align-items: center
+  padding: 5px
+
+.filter-main-sub-container
+  padding: 10px 0
 
 .button-searchbar-action-container
-  width: 90%
+  width: 100%
   padding: 5px 0
 
 .button-searchbar-action
@@ -23,11 +24,15 @@
   margin: 0
   height: 30px
   font-size: 14px
+  background-color: #213c4b
+  color: #a8a8a8
 
 .button-searchbar-action:hover
+  background-color: #152933
   color: white
 
 .button-searchbar-action-active
+  background-color: #152933
   color: white
 
 .search-container
@@ -35,6 +40,13 @@
   display: flex
   flex-direction: column
   border-bottom: 1px solid #a8a8a8
+
+.search-sub-container
+  padding: 10px 0
+
+.search-bar-input-field
+  margin: 5px 0
+  padding-bottom: 5px
 
 .search-error-message
   color: red
@@ -57,13 +69,13 @@
   border-left: 4px solid #fc6e51
 
 .search-bar-checkbox-container-healthcare
-  border-left: 4px solid #5d9cec
+  border-left: 4px solid #ffce54
 
 .search-bar-checkbox-container-climate
   border-left: 4px solid #a0d468
 
 .search-bar-checkbox-container-globalchange
-  border-left: 4px solid #ec87c0
+  border-left: 4px solid #ac92ec
 
 .search-bar-checkbox-container-inclusion
-  border-left: 4px solid #ac92ec
+  border-left: 4px solid #4fc1e9
