Improved home UI

--- a/client/views/home/donor/search-bar/_search-bar.sass
+++ b/client/views/home/donor/search-bar/_search-bar.sass
@@ -29,11 +29,11 @@
 
 .button-searchbar-action:hover
   background-color: #152933
-  color: white
+  color: #0097A7
 
 .button-searchbar-action-active
   background-color: #152933
-  color: white
+  color: #0097A7
 
 .search-container
   padding: 5px
