--- a/client/views/navbar/_navbar.sass
+++ b/client/views/navbar/_navbar.sass
@@ -43,8 +43,8 @@
 
 .nav-button:hover
   background-color: #152933
-  color: white
+  color: #0097A7
 
 .nav-button-active
   background-color: #152933
-  color: white
+  color: #0097A7
