--- a/client/views/home/donor/match/_match.sass
+++ b/client/views/home/donor/match/_match.sass
@@ -2,7 +2,7 @@
   border: 2px solid #a8a8a8
   margin: 20px
   width: 300px
-  height: 290px
+  height: 300px
   text-align: center
   background-color: #f1f1f1
 
@@ -33,11 +33,17 @@
   background-color: #4fc1e9
 
 .match-title
-  margin: 10px 20px 18px 20px
+  margin: 5px 20px 8px 20px
   padding: 0
   height: 40px
   line-height: 20px
   overflow-y: hidden
+
+.match-separator
+  margin: 0 20px
+  border: 0
+  height: 1px
+  background-color: #a8a8a8
 
 .match-description
   padding: 0 20px
