--- a/client/views/home/donor/search-bar/_search-bar.sass
+++ b/client/views/home/donor/search-bar/_search-bar.sass
@@ -8,6 +8,14 @@
   font-weight: bold
   width: 100%
 
+.search-bar-welcome-message
+  margin: 5px 0
+  padding: 0 5px 20px 5px
+  font-style: italic
+  font-weight: 400
+  text-align: center
+  border-bottom: 1px solid #a8a8a8
+
 .filter-main-actions-container
   border-bottom: 1px solid #a8a8a8
   padding: 5px
