Improved navbar UI

--- a/client/style/style.sass
+++ b/client/style/style.sass
@@ -1,7 +1,10 @@
 body
   margin: 0
   font-family: 'Lato', sans-serif;
-  background-color: #f1f1f1
+  background-image: url(http://localhost:3000/assets/background-landing-page.jpg)
+  background-position: center center
+  background-size: cover
+  background-repeat: none
 
 a 
   text-decoration: none
