--- a/client/views/login-form/_login-form.sass
+++ b/client/views/login-form/_login-form.sass
@@ -1,17 +1,21 @@
 .login-form-container
   display: flex
   flex-direction: row
+  align-items: center
   height: 100%
 
 .login-form-field-container
   display:flex
   flex-direction: column
 
-.login-form-input-field
-  margin: 8px 5px 3px 0
+.login-form-input-field-container
+  margin: 3px 5px 3px 0
 
 .login-error-message
   color: red
   font-size: 13px
   margin: 0 5px
 
+.navbar-login-button
+  font-size: 13px
+  padding: 4px 12px
