--- a/client/views/navbar/_navbar.sass
+++ b/client/views/navbar/_navbar.sass
@@ -2,13 +2,20 @@
   display: flex
   flex-direction: row
   width: 100%
-  height: 50px
+  height: 60px
   background-color: #213c4b
 
 .logo-container
   lex-grow: 1
   display: flex
   justify-content: flex-start
+  align-items: center
+
+.nav-logo
+  margin-left: 10px
+  padding: 5px
+  height: 40px
+  width: 60px
 
 .navbar-actions-container
   margin: 0 20px;
