Setup Modal component

--- a/client/views/home/donor/matches/_matches.sass
+++ b/client/views/home/donor/matches/_matches.sass
@@ -33,7 +33,7 @@
   padding: 3px 8px
   border-radius: 15px
   font-size: 14px
-  color: white
+  background-color: white
 
 .match-industry-tags-tech
   border: 1px solid #fc6e51
