--- a/client/views/home/donor/search-bar/_search-bar.sass
+++ b/client/views/home/donor/search-bar/_search-bar.sass
@@ -32,16 +32,16 @@
   margin: 0
   height: 30px
   font-size: 14px
-  background-color: #213c4b
+  background-color: #273a48
   color: #a8a8a8
 
 .button-searchbar-action:hover
   background-color: #152933
-  color: #0097A7
+  color: #32c9dc
 
 .button-searchbar-action-active
   background-color: #152933
-  color: #0097A7
+  color: #32c9dc
 
 .search-container
   padding: 5px
