--- a/client/views/navbar/_navbar.sass
+++ b/client/views/navbar/_navbar.sass
@@ -3,7 +3,7 @@
   flex-direction: row
   width: 100%
   height: 60px
-  background-color: #213c4b
+  background-color: #273a48
 
 .logo-container
   lex-grow: 1
@@ -44,14 +44,14 @@
   padding: 5px
   height: 100%
   width: 100%
-  background-color: #213c4b
+  background-color: #273a48
   font-size: 14px
   color: #a8a8a8
 
 .nav-button:hover
   background-color: #152933
-  color: #0097A7
+  color: #32c9dc
 
 .nav-button-active
   background-color: #152933
-  color: #0097A7
+  color: #32c9dc
