Improved Modal UI

--- a/client/components/modal/_modal.sass
+++ b/client/components/modal/_modal.sass
@@ -7,7 +7,6 @@
   z-index: 9999;
   background-color: rgba(0, 0, 0, 0.4)
 
-
 .modal-container
   position: fixed
   top: 50%
@@ -18,3 +17,19 @@
   margin-top: -250px
   margin-left: -250px
 
+.modal-close-button-container
+  float: right
+
+.modal-close-button
+  margin: 10px
+  
+.modal-separator
+  margin: 20px 40px
+  border: 0
+  height: 1px
+  background-color: #a8a8a8
+
+.modal-description
+  padding: 20px 40px
+  height: 300px
+  overflow-y: auto
