--- a/client/components/modal/_modal.sass
+++ b/client/components/modal/_modal.sass
@@ -22,3 +22,9 @@
 
 .modal-close-button
   margin: 10px
+  background-color: #273a48
+  color: #a8a8a8
+
+.modal-close-button:hover
+  background-color: #152933
+  color: #32c9dc
