Modified message modal layout

--- a/client/views/modal-message/_modal-message.sass
+++ b/client/views/modal-message/_modal-message.sass
@@ -1,11 +1,5 @@
 .message-modal-title
-  margin-top: 40px
-
-.message-modal-separator
-  margin: 20px 40px
-  border: 0
-  height: 1px
-  background-color: #a8a8a8
+  margin: 40px 0 20px 0
 
 .message-modal-form
   display: flex
