Improved Repo structure

--- a/client/views/landing-page/_landing-page.sass
+++ b/client/views/landing-page/_landing-page.sass
@@ -5,3 +5,7 @@
   justify-content: space-around
   align-items: center
   height: 93vh
+  background-image: url(http://localhost:3000/assets/background-landing-page.jpg)
+  background-position: center center
+  background-size: cover
+  background-repeat: none
