Setup proptypes + change handlers message modal

--- a/client/views/modal-message/_modal-message.sass
+++ b/client/views/modal-message/_modal-message.sass
@@ -17,3 +17,10 @@
 
 .message-modal-text-area
   width: 100%
+
+.message-error-message
+  width: 80%
+  color: red
+  font-size: 13px
+  margin: 0
+  text-align: left
