refactored login form error handling + improved UI

--- a/client/views/navbar/login-form/_login-form.sass
+++ b/client/views/navbar/login-form/_login-form.sass
@@ -13,8 +13,13 @@
 
 .login-error-message
   color: red
-  font-size: 13px
-  margin: 0 5px
+  font-size: 12px
+  margin: 0
+  height: 12px
+
+.navbar-login-button-container
+  height: 37px
+  align-items: flex-start
 
 .navbar-login-button
   font-size: 13px
