refactored error handling + improved UI signupform

--- a/client/views/landing-page/signupform/_signupform.sass
+++ b/client/views/landing-page/signupform/_signupform.sass
@@ -6,7 +6,6 @@
   padding: 20px
   background-color: white
 
-
 .signup-header
   text-align: center
   font-size: 24px
@@ -15,11 +14,18 @@
 .signup-inputfields-container
   padding: 10px
   display: flex
-  flex-direction: column
+  flex-direction: row
+  justify-content: center
+  flex-wrap: wrap
+  width: 350px
+
+.signup-input-field-container
+  margin: 0 10px
 
 .signup-error-message
   color: red
-  font-size: 13px
+  font-size: 12px
   margin: 0
-  text-align: center
+  text-align: left
+  height: 12px
   
