Modified color code signup process

--- a/client/views/signup-step/_signup-step.sass
+++ b/client/views/signup-step/_signup-step.sass
@@ -1,3 +1,64 @@
 .signup-step-buttons-container
   display: flex
   justify-content: center
+
+.button-signup-step-option
+  background-color: #8BC34A
+  color: white
+  height: 100px
+  font-size: 14px
+  width: 100px
+  margin: 10px
+
+.button-signup-step-option:hover:enabled
+  background-color: #689F38
+
+.button-signup-step-option-active
+  background-color: #689F38
+  
+.button-signup-step-option-tech
+  background-color: #fc6e51
+
+.button-signup-step-option-tech-active
+  background-color: #e9573f
+
+.button-signup-step-option-tech:hover
+  background-color: #e9573f !important
+
+.button-signup-step-option-healthcare
+  background-color: #ffce54
+
+.button-signup-step-option-healthcare-active
+  background-color: #f6bb42
+
+.button-signup-step-option-healthcare:hover
+  background-color: #f6bb42 !important
+
+.button-signup-step-option-climate
+  background-color: #a0d468
+
+.button-signup-step-option-climate-active
+  background-color: #8cc152 
+
+.button-signup-step-option-climate:hover
+  background-color: #8cc152 !important
+
+.button-signup-step-option-globalchange
+  background-color: #ac92ec
+
+.button-signup-step-option-globalchange-active
+  background-color: #967adc
+
+.button-signup-step-option-globalchange:hover
+  background-color: #967adc !important
+
+.button-signup-step-option-inclusion
+  background-color: #4fc1e9
+
+.button-signup-step-option-inclusion-active
+  background-color: #3bafda
+
+.button-signup-step-option-inclusion:hover
+  background-color: #3bafda !important
+
+
