Improved signup UI

--- a/client/views/signup-step/_signup-step.sass
+++ b/client/views/signup-step/_signup-step.sass
@@ -21,6 +21,8 @@
 
 .button-signup-step-option-tech-active
   background-color: #e9573f
+  text-decoration: underline
+  font-size: 18px
 
 .button-signup-step-option-tech:hover
   background-color: #e9573f !important
@@ -30,6 +32,8 @@
 
 .button-signup-step-option-healthcare-active
   background-color: #f6bb42
+  text-decoration: underline
+  font-size: 18px
 
 .button-signup-step-option-healthcare:hover
   background-color: #f6bb42 !important
@@ -39,6 +43,8 @@
 
 .button-signup-step-option-climate-active
   background-color: #8cc152 
+  text-decoration: underline
+  font-size: 18px
 
 .button-signup-step-option-climate:hover
   background-color: #8cc152 !important
@@ -48,6 +54,8 @@
 
 .button-signup-step-option-globalchange-active
   background-color: #967adc
+  text-decoration: underline
+  font-size: 18px
 
 .button-signup-step-option-globalchange:hover
   background-color: #967adc !important
@@ -57,6 +65,8 @@
 
 .button-signup-step-option-inclusion-active
   background-color: #3bafda
+  text-decoration: underline
+  font-size: 18px
 
 .button-signup-step-option-inclusion:hover
   background-color: #3bafda !important
