Improved UI landing page

--- a/client/views/landing-page/try-demo/_try-demo.sass
+++ b/client/views/landing-page/try-demo/_try-demo.sass
@@ -5,7 +5,8 @@
   flex-direction: column
   justify-content: center
   align-items: center
-  background-color: white
+  background-color: #273a48
+  color: white
 
 .try-demo-header
   text-align: center
@@ -15,3 +16,13 @@
 .try-demo-text
   text-align: center
   font-size: 12px
+
+.try-demo-button
+  padding: 5px 12px
+  font-size: 14px
+  background-color: #00BCD4
+  color: white
+
+.try-demo-button:hover
+  background-color: white
+  color: #00BCD4
