--- a/client/views/landing-page/signupform/_signupform.sass
+++ b/client/views/landing-page/signupform/_signupform.sass
@@ -4,7 +4,8 @@
   align-items: center
   margin: 50px
   padding: 20px
-  background-color: white
+  background-color: #273a48
+  color: white
 
 .signup-header
   text-align: center
@@ -28,4 +29,13 @@
   margin: 0
   text-align: left
   height: 12px
-  
+
+.signup-form-button
+  padding: 5px 12px
+  font-size: 14px
+  background-color: #00BCD4
+  color: white
+
+.signup-form-button:hover
+  background-color: white
+  color: #00BCD4
