Improved search bar error UI

--- a/client/views/home/donor/search-bar/_search-bar.sass
+++ b/client/views/home/donor/search-bar/_search-bar.sass
@@ -58,8 +58,9 @@
 
 .search-error-message
   color: red
-  font-size: 13px
+  font-size: 12px
   margin: 0
+  height: 12px
 
 .filter-container
   margin: 0
