Changed title to name

--- a/client/views/home/donor/match/_match.sass
+++ b/client/views/home/donor/match/_match.sass
@@ -32,7 +32,7 @@
 .industry-name-bullet-inclusion
   background-color: #4fc1e9
 
-.match-title
+.match-name
   margin: 5px 20px 8px 20px
   padding: 0
   height: 40px
