Added header to Sign-up steps

--- a/client/views/organization-form/_organization-form.sass
+++ b/client/views/organization-form/_organization-form.sass
@@ -1,4 +1,9 @@
+.signup-step-header
+  font-size: 24px
+  text-align: center
+
 .organization-form
+  margin: 40px 0
   display: flex
   flex-direction: column
   align-items: center
