--- a/client/views/signup-step/_signup-step.sass
+++ b/client/views/signup-step/_signup-step.sass
@@ -1,6 +1,17 @@
 .signup-step-buttons-container
   display: flex
   justify-content: center
+  flex-direction: column
+
+.signup-step-header
+  font-size: 24px
+  text-align: center
+
+.signup-step-buttons-container
+  margin: 80px 0
+  display: flex
+  flex-direction: row
+  justify-content: center
 
 .button-signup-step-option
   background-color: #8BC34A
