--- a/client/components/message/_message.sass
+++ b/client/components/message/_message.sass
@@ -1,25 +1,19 @@
 .message-container
   display: flex
   flex-direction: column
-  margin: 0 20px
-
-.message-sender
-  font-size: 14px
-  color: #273a48
-
-.message-sender-from
-  float: right
-
-.message-sender-to
-  float: left
+  margin: 5px 20px
 
 .message
   font-size: 14px
-  color: #a8a8a8
+  color: #273a48
   margin: 0 10px
+  background-color: #f1f1f1
+  border-radius: 10px
+  padding: 10px 5px
+  width: 60%
 
 .message-from
-  float: right
+  float: left
 
 .message-to
-  float: left
+  float: right
