--- a/client/views/messaging/message-thread/_message-thread.sass
+++ b/client/views/messaging/message-thread/_message-thread.sass
@@ -1,12 +1,21 @@
+.messaging-thread-header-container
+  margin: 0
+  padding: 0
+  border-bottom: 1px solid #a8a8a8
+
 .messaging-thread-header
   font-size: 18px
   margin: 20px
+
+.messages-container
+  margin: 15px 0
 
 .messaging-thread-new-message-container
   display: flex
   flex-direction: row
   align-items: center
   width: 100%
+  border-top: 1px solid #a8a8a8
 
 .messaging-thread-new-message-input-field-container
   flex-grow: 9
