Fixed messaging page width

--- a/client/views/messaging/_messaging.sass
+++ b/client/views/messaging/_messaging.sass
@@ -1,10 +1,12 @@
 .messaging-container
   display: flex
 
-.message-thread-container
+.messaging-thread-container
   flex-grow: 3
+  width: 800px
   border: 1px solid red
 
-.message-history-container
+.messaging-history-container
   flex-grow: 1
+  width: 300px
   border: 1px solid blue
