Improved messaging UI

--- a/client/views/messaging/_messaging.sass
+++ b/client/views/messaging/_messaging.sass
@@ -4,9 +4,10 @@
 .messaging-thread-container
   flex-grow: 3
   width: 800px
-  border: 1px solid red
 
 .messaging-history-container
   flex-grow: 1
   width: 300px
-  border: 1px solid blue
+  background-color: #f1f1f1
+  border-left: 2px solid #a8a8a8
+  height: 95vh
