--- a/client/views/messaging/message-thread/_message-thread.sass
+++ b/client/views/messaging/message-thread/_message-thread.sass
@@ -2,6 +2,7 @@
   margin: 0
   padding: 0
   border-bottom: 1px solid #a8a8a8
+  height: 5vh
 
 .messaging-thread-header
   font-size: 18px
@@ -9,13 +10,15 @@
 
 .messages-container
   margin: 15px 0
+  height: 70vh
+  overflow-y: auto
 
 .messaging-thread-new-message-container
   display: flex
   flex-direction: row
   align-items: center
-  width: 100%
   border-top: 1px solid #a8a8a8
+  height: 10vh
 
 .messaging-thread-new-message-input-field-container
   flex-grow: 9
