--- a/client/components/message/_message.sass
+++ b/client/components/message/_message.sass
@@ -1,19 +1,21 @@
 .message-container
   display: flex
   flex-direction: column
-  margin: 5px 20px
+  margin: 10px 20px
 
 .message
   font-size: 14px
   color: #273a48
   margin: 0 10px
-  background-color: #f1f1f1
   border-radius: 10px
   padding: 10px 5px
   width: 60%
 
 .message-from
   align-self: flex-start
+  background-color: #f1f1f1
 
 .message-to
   align-self: flex-end
+  background-color: white
+  border: 2px solid #f1f1f1
