--- a/client/components/message/_message.sass
+++ b/client/components/message/_message.sass
@@ -3,6 +3,16 @@
   flex-direction: column
   margin: 10px 20px
 
+.message-time-from
+  align-self: flex-end
+  font-size: 10px
+  margin: 2px 20px
+
+.message-time-to
+  align-self: flex-start
+  font-size: 10px
+  margin: 2px 20px
+
 .message
   font-size: 14px
   color: #273a48
@@ -12,10 +22,10 @@
   width: 60%
 
 .message-from
-  align-self: flex-start
+  align-self: flex-end
   background-color: #f1f1f1
 
 .message-to
-  align-self: flex-end
+  align-self: flex-start
   background-color: white
   border: 2px solid #f1f1f1
