improved message thread UI

--- a/client/views/messaging/_messaging.sass
+++ b/client/views/messaging/_messaging.sass
@@ -4,10 +4,11 @@
 .messaging-thread-container
   flex-grow: 3
   width: 800px
+  overflow-y: auto
 
 .messaging-history-container
   flex-grow: 1
   width: 300px
   background-color: #f1f1f1
   border-left: 2px solid #a8a8a8
-  height: 95vh
+  height: calc(100vh - 60px)
