--- a/client/views/messaging/message-thread/_message-thread.sass
+++ b/client/views/messaging/message-thread/_message-thread.sass
@@ -1,16 +1,19 @@
 .messaging-thread-header-container
   margin: 0
   padding: 0
+  display: flex
+  align-items: center
   border-bottom: 1px solid #a8a8a8
-  height: 5vh
+  height: 62px
+
 
 .messaging-thread-header
   font-size: 18px
   margin: 20px
 
 .messages-container
-  margin: 15px 0
-  height: 70vh
+  margin: 15px 15px
+  height: calc(100vh - 30px - 60px - 60px - 80px - 4px)
   overflow-y: auto
 
 .messaging-thread-new-message-container
@@ -18,7 +21,7 @@
   flex-direction: row
   align-items: center
   border-top: 1px solid #a8a8a8
-  height: 10vh
+  height: 80px
 
 .messaging-thread-new-message-input-field-container
   flex-grow: 9
