Setup message notification

--- a/client/components/message-history-item/_message-history-item.sass
+++ b/client/components/message-history-item/_message-history-item.sass
@@ -2,6 +2,9 @@
   padding: 5px 10px
   border-bottom: 1px solid #f1f1f1
   background-color: white
+  display: flex
+  flex-direction: row
+  justify-content: space-between
 
 .message-history-item-container:hover
   background-color:  #f1f1f1
@@ -22,3 +25,14 @@
   padding: 0 10px 0 5px
   margin: 0
   color: #273a48
+
+.message-history-notification
+  background-color: red
+  padding-top: 3px
+  color: white
+  width: 20px
+  height: 15px
+  line-height: 12px
+  font-size: 12px
+  border-radius: 20px
+  text-align: center
