Improved messaging UI

--- a/client/components/message/_message.sass
+++ b/client/components/message/_message.sass
@@ -19,13 +19,13 @@
   margin: 0 10px
   border-radius: 10px
   padding: 10px 10px
-  width: 60%
+  width: 70%
 
 .message-from
   align-self: flex-end
-  background-color: #f1f1f1
+  background-color: #e1e9ee
 
 .message-to
   align-self: flex-start
   background-color: white
-  border: 2px solid #f1f1f1
+  border: 2px solid #e1e9ee
