--- a/client/views/messaging/_messaging.sass
+++ b/client/views/messaging/_messaging.sass
@@ -1,14 +1,17 @@
 .messaging-container
   display: flex
+  justify-content: center
+  background-color: #f1f1f1
 
 .messaging-thread-container
   flex-grow: 3
-  width: 800px
+  max-width: 600px
   overflow-y: auto
+  background-color: white
 
 .messaging-history-container
   flex-grow: 1
-  width: 300px
-  background-color: #f1f1f1
-  border-left: 2px solid #a8a8a8
+  max-width: 250px
+  background-color: white
+  border-left: 1px solid #a8a8a8
   height: calc(100vh - 60px)
