--- a/client/components/message-history-item/_message-history-item.sass
+++ b/client/components/message-history-item/_message-history-item.sass
@@ -5,16 +5,17 @@
   display: flex
   flex-direction: row
   justify-content: space-between
+  height: 50px
 
 .message-history-item-container:hover
   background-color:  #f1f1f1
 
 .message-history-item-container-active
   border-bottom: 1px solid #00BCD4
-  border-left: 4px solid #00BCD4
-
-.message-history-item-container-active:hover
-  background-color: white
+  border-right: 1px solid #00BCD4
+  border-top: 1px solid #00BCD4
+  border-left: 5px solid #00BCD4
+  background-color:  #f1f1f1
 
 .message-history-item-header
   font-size: 16px
