--- a/client/views/messaging/message-history/_message-history.sass
+++ b/client/views/messaging/message-history/_message-history.sass
@@ -1,2 +1,12 @@
-.message-history-container
-  padding: 5px
+.messaging-history-header-container
+  margin: 0
+  padding: 0
+  display: flex
+  align-items: center
+  border-bottom: 1px solid #a8a8a8
+  height: 62px
+
+
+.messaging-history-header
+  font-size: 18px
+  margin: 20px
