Setup auto scroll for messages

--- a/client/components/message-history-item/_message-history-item.sass
+++ b/client/components/message-history-item/_message-history-item.sass
@@ -25,6 +25,8 @@
   font-size: 13px
   padding: 0 10px 0 5px
   margin: 0
+  height: 16px
+  overflow-y: hidden
   color: #273a48
 
 .message-history-notification
