fixed navbar state on refresh

--- a/client/views/navbar/_navbar.sass
+++ b/client/views/navbar/_navbar.sass
@@ -30,6 +30,20 @@
 .nav-link
   height: 100%
   width: 100px
+  background-color: #273a48
+  font-size: 14px
+  color: #a8a8a8
+  display: flex
+  justify-content: center
+  align-items: center
+
+.nav-link:hover
+  background-color: #152933
+  color: #32c9dc
+
+.nav-link-active
+  background-color: #152933
+  color: #32c9dc
 
 .nav-link-logout
   margin-right: 3px
