improved messaging UI

--- a/client/components/message-history-item/_message-history-item.sass
+++ b/client/components/message-history-item/_message-history-item.sass
@@ -30,7 +30,7 @@
   color: #273a48
 
 .message-history-notification
-  background-color: red
+  background-color: #00BCD4
   padding-top: 3px
   color: white
   width: 20px
