--- a/client/views/messaging/_messaging.sass
+++ b/client/views/messaging/_messaging.sass
@@ -1,7 +1,8 @@
 .messaging-container
   display: flex
   justify-content: center
-  background-color: #f1f1f1
+  background-color: #ededed
+  padding: 20px 0
 
 .messaging-thread-container
   flex-grow: 3
@@ -14,4 +15,4 @@
   max-width: 250px
   background-color: white
   border-left: 1px solid #a8a8a8
-  height: calc(100vh - 60px)
+  height: calc(100vh - 60px - 40px)
