--- a/client/views/messaging/message-history/_message-history.sass
+++ b/client/views/messaging/message-history/_message-history.sass
@@ -3,6 +3,7 @@
   padding: 0
   display: flex
   align-items: center
+  justify-content: center
   border-bottom: 1px solid #a8a8a8
   height: 62px
 
