Fixed messaging reducer when no message history

--- a/client/views/messaging/_messaging.sass
+++ b/client/views/messaging/_messaging.sass
@@ -1,3 +1,15 @@
+.messaging-view-container
+  background-color: #ededed
+
+.messaging-empty-message
+  max-width: 850px
+  display: flex
+  justify-content: center
+  align-items: center
+  margin: 0 auto
+  background-color: white
+  color: #00BCD4
+
 .messaging-container
   display: flex
   justify-content: center
@@ -15,4 +27,4 @@
   max-width: 250px
   background-color: white
   border-left: 1px solid #a8a8a8
-  height: calc(100vh - 60px - 40px)
+  height: calc(100vh - 60px - 40px - 51px)
