--- a/client/views/messaging/message-thread/_message-thread.sass
+++ b/client/views/messaging/message-thread/_message-thread.sass
@@ -13,7 +13,7 @@
 
 .messages-container
   margin: 15px 15px
-  height: calc(100vh - 30px - 60px - 60px - 100px - 40px - 4px)
+  height: calc(100vh - 30px - 60px - 60px - 100px - 40px - 4px - 51px)
   overflow-y: auto
 
 .messaging-thread-new-message-container
