fixed profile page styling

--- a/client/views/home/non-profit/_non-profit.sass
+++ b/client/views/home/non-profit/_non-profit.sass
@@ -1,6 +1,7 @@
 .organization-profile-view
   background-color: #ededed
   padding: 80px 0
+  height: calc(100vh - 60px - 160px)
 
 .organization-profile-container
   width: 600px
@@ -19,7 +20,7 @@
 .organization-details
   background-color: #f1f1f1
   color: #273a48
-  padding: 10px
+  padding: 5px 10px
 
 .organization-profile-edit-button
   padding: 5px 12px
