--- a/client/views/profile/_profile.sass
+++ b/client/views/profile/_profile.sass
@@ -1,9 +1,13 @@
+.profile-view
+  background-color: #ededed
+  padding: 80px 0
+  height: calc(100vh - 60px - 160px)
+
 .profile-container
   width: 400px
-  margin: 80px auto
+  margin: 0 auto
   padding: 20px
-  background-color: #273a48
-  color: white
+  background-color: white
 
 .profile-information-header
   font-size: 24px
@@ -12,6 +16,11 @@
 .profile-information-container
   width: 200px
   margin: 40px auto
+
+.profile-details
+  background-color: #f1f1f1
+  color: #273a48
+  padding: 5px 10px
 
 .profile-edit-button
   padding: 5px 12px
