improved responsiveness organization and user profiles

--- a/client/views/home/non-profit/_non-profit.sass
+++ b/client/views/home/non-profit/_non-profit.sass
@@ -4,7 +4,7 @@
   height: calc(100vh - 60px - 160px)
 
 .organization-profile-container
-  width: 600px
+  max-width: 600px
   margin: 0 auto
   padding: 20px
   background-color: white
@@ -14,7 +14,7 @@
   text-align: center
 
 .organization-profile-information-container
-  width: 500px
+  max-width: 500px
   margin: 40px auto
 
 .organization-details
