--- a/client/views/profile/_profile.sass
+++ b/client/views/profile/_profile.sass
@@ -4,7 +4,7 @@
   height: calc(100vh - 60px - 160px)
 
 .profile-container
-  width: 400px
+  max-width: 400px
   margin: 0 auto
   padding: 20px
   background-color: white
@@ -14,7 +14,7 @@
   text-align: center
 
 .profile-information-container
-  width: 200px
+  max-width: 300px
   margin: 40px auto
 
 .profile-details
