Added padding for messaging top message

--- a/client/views/messaging/_messaging.sass
+++ b/client/views/messaging/_messaging.sass
@@ -1,7 +1,7 @@
 .messaging-view-container
   background-color: #ededed
 
-.messaging-empty-message
+.messaging-top-message-container
   max-width: 850px
   display: flex
   justify-content: center
@@ -9,6 +9,9 @@
   margin: 0 auto
   background-color: white
   color: #00BCD4
+
+.messaging-top-message
+  padding: 0 10px
 
 .messaging-container
   display: flex
