Implemented password change feature

--- a/client/views/profile/_profile.sass
+++ b/client/views/profile/_profile.sass
@@ -15,19 +15,58 @@
 
 .profile-information-container
   max-width: 300px
-  margin: 40px auto
+  margin: 40px auto 0 auto
 
 .profile-details
   background-color: #f1f1f1
   color: #273a48
   padding: 5px 10px
 
-.profile-edit-button
+.profile-button-container
+  margin-top: 20px
+
+.profile-button
   padding: 5px 12px
   font-size: 14px
   background-color: #00BCD4
   color: white
 
-.profile-edit-button:hover
+.profile-button:hover
   background-color: white
   color: #00BCD4
+
+.password-change-input-fields-container
+  margin-top: 30px
+
+.password-change-input-field
+  width: 100%
+
+.password-change-error-message
+  color: red
+  font-size: 12px
+  margin: 0
+  text-align: left
+  height: 12px
+
+.password-change-message-container
+  height: 40px
+  margin: 20px auto
+  display: flex
+  align-items: center
+  justify-content: center
+
+.password-change-message
+  text-align: center
+  color: white
+  width: 440px
+  margin 0
+  height: 100%
+  display: flex
+  align-items: center
+  justify-content: center
+
+.password-change-message-confirmed
+  background-color: #a0d468
+
+.password-change-message-error
+  background-color: #fc6e51
