improved profile UI

--- a/client/views/profile/_profile.sass
+++ b/client/views/profile/_profile.sass
@@ -17,9 +17,19 @@
   max-width: 300px
   margin: 40px auto 0 auto
 
+.profile-information-sub-container
+  display: flex
+  flex-direction: row
+  align-items: center
+
+.profile-details-title
+  width: 30%
+
 .profile-details
   background-color: #f1f1f1
   color: #273a48
+  width: 70%
+  text-align: center
   padding: 5px 10px
 
 .profile-button-container
