Setup cancel button on password change in profile

--- a/client/views/profile/_profile.sass
+++ b/client/views/profile/_profile.sass
@@ -32,6 +32,11 @@
   text-align: center
   padding: 5px 10px
 
+.profile-change-password-button-container
+  display: flex
+  flex-direction: row
+  justify-content: space-around
+
 .profile-button-container
   margin-top: 20px
 
@@ -44,6 +49,14 @@
 .profile-button:hover
   background-color: white
   color: #00BCD4
+
+.profile-change-password-cancel-button
+  background-color: white
+  color: #fc6e51
+
+.profile-change-password-cancel-button:hover
+  background-color: #fc6e51
+  color: white
 
 .password-change-input-fields-container
   margin-top: 30px
