Setup edit organization form error handling

--- a/client/views/modal-edit-organization/_modal-edit-organization.sass
+++ b/client/views/modal-edit-organization/_modal-edit-organization.sass
@@ -3,7 +3,7 @@
   text-align: center
 
 .edit-organization-form
-  margin: 40px 0
+  margin: 25px 0
   display: flex
   flex-direction: column
   align-items: center
@@ -19,3 +19,10 @@
 
 .edit-organization-form-text-area-field
   width: 100%
+
+.edit-organization-error-message
+  color: red
+  font-size: 12px
+  margin: 0
+  text-align: left
+  height: 12px
