Setup overflow on message history list

--- a/client/views/messaging/message-history/_message-history.sass
+++ b/client/views/messaging/message-history/_message-history.sass
@@ -7,7 +7,10 @@
   border-bottom: 1px solid #a8a8a8
   height: 62px
 
-
 .messaging-history-header
   font-size: 18px
   margin: 20px
+
+.message-history-list-container
+  overflow-y: auto
+  height: calc(100vh - 60px - 40px - 51px - 62px - 1px)
