--- a/client/views/landing-page/_landing-page.sass
+++ b/client/views/landing-page/_landing-page.sass
@@ -1,13 +1,14 @@
 .landing-page-view-container
-  padding: 60px
+  padding: 10px
   background-image: url(http://localhost:3000/assets/background-landing-page.jpg)
   background-position: center center
   background-size: cover
   background-repeat: no-repeat
 
-@media screen and (min-width: 1070px) 
+@media screen and (min-width: 970px) 
   .landing-page-view-container
     height: calc(100vh - 120px - 60px)
+    padding: 60px
 
 .landing-page-header-container
   padding: 40px
@@ -16,6 +17,25 @@
 .landing-page-header
   text-align: center
 
+.landing-page-login-form-container
+  display: none
+
+@media screen and (max-width: 480px) 
+  .landing-page-login-form-container
+    margin: 50px auto
+    padding: 20px
+    display: flex
+    flex-direction: column
+    justify-content: space-around
+    align-items: center
+    background-color: #273a48
+    color: white
+
+  .landing-page-login-form-header
+    text-align: center
+    font-size: 24px
+    width: 300px
+    
 .landing-page-header-description
   text-align: center
 
